--- a/kwon.nyc/notes/covid-the-sequel/index.html
+++ b/kwon.nyc/notes/covid-the-sequel/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Covid: the Sequel &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="Well, Covid got me again. I’m recovering from a second bout after having had it in April 2020. That feels like a different era of fear and confusion—testing was nonexistent, we were running out of toilet paper and Tylenol, and the general guidance was to isolate but go to the emergency room if you were really sick but to call ahead and wear a mask and also if you were sick but not sick sick you should call your doctor (and you better know the difference between sick sick and sick and you better have a pulse oximeter at home, what do you mean you don’t have a pulse oximeter at home?">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/covid-the-sequel/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
